github 에 title 과 content 자동 완성 추가

--- a/manifest.json
+++ b/manifest.json
@@ -12,10 +12,18 @@
       "js": ["contentScript.js"]
     },
     {
-      "matches": ["https://mail.cloud.toast.com/toastmail/template/*", "https://alpha-mail.cloud.toast.com/toastmail/template/*"],
+      "matches": [
+        "https://mail.cloud.toast.com/toastmail/template/*",
+        "https://alpha-mail.cloud.toast.com/toastmail/template/*"
+      ],
       "run_at": "document_end",
       "css": ["notifications.css"],
       "js": ["email.js"]
+    },
+    {
+      "matches": ["https://github.nhnent.com/*"],
+      "run_at": "document_end",
+      "js": ["github.js"]
     }
   ]
 }
