--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
+
 {
   "name": "Dooray Clipboard",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Dooray에서 제목을 clipboad에 copy를 쉽게 해주자",
   "permissions": ["activeTab"],
   "manifest_version": 2,
@@ -25,5 +26,9 @@
       "run_at": "document_end",
       "js": ["github.js"]
     }
-  ]
+  ],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  }
 }
