github에서  자동완성 기능, 여러 DoorayProject중에서 선택 가능하게 기능 추가

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Dooray Clipboard",
   "version": "1.0.3",
   "description": "Dooray에서 제목을 clipboad에 copy를 쉽게 해주자",
-  "permissions": ["activeTab"],
+  "permissions": ["activeTab", "storage"],
   "manifest_version": 2,
   "content_scripts": [
     {
