--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,12 @@
-
 {
   "name": "Dooray Clipboard",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Dooray에서 제목을 clipboad에 copy를 쉽게 해주자",
   "permissions": ["activeTab", "storage"],
-  "manifest_version": 2,
+  "manifest_version": 3,
+  "background": {
+    "service_worker": "background.js"
+  },
   "content_scripts": [
     {
       "matches": ["https://nhnent.dooray.com/*"],
@@ -13,22 +15,13 @@
       "js": ["contentScript.js"]
     },
     {
-      "matches": [
-        "https://mail.cloud.toast.com/toastmail/template/*",
-        "https://alpha-mail.cloud.toast.com/toastmail/template/*"
-      ],
-      "run_at": "document_end",
-      "css": ["notifications.css"],
-      "js": ["email.js"]
-    },
-    {
       "matches": ["https://github.nhnent.com/*"],
       "run_at": "document_end",
       "js": ["github.js"]
     }
   ],
-  "background": {
-    "scripts": ["background.js"],
-    "persistent": false
-  }
+  "host_permissions": [
+    "https://nhnent.dooray.com/*",
+    "https://github.nhnent.com/*"
+  ]
 }
