--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Dooray Clipboard",
-  "version": "1.0.10",
-  "description": "Dooray에서 제목을 clipboad에 copy를 쉽게 해주자",
+  "version": "1.0.11",
+  "description": "Dooray 에서 제목을 clipboard 에 copy 를 쉽게 해주자",
   "permissions": ["activeTab", "storage"],
   "manifest_version": 3,
   "background": {
